@@ -1,0 +1,100 @@
+<!--//$Id$  -->
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
+<html>
+<head>
+  <title>DDS4CCM Tutorial Shapes</title>
+</head>
+
+<body>
+  <h1>General</h1>
+  <p>
+    This tutorial explains how to use a DDS4CCM connector in
+    combination with a CCM component.<br/>
+  </p>
+
+  <h2>System</h2>
+  <p>
+    The system consists of three components:
+    <ul>
+      <li>A sender component</li>
+      <li>A receiver component</li>
+      <li>A controller component</li>
+    </ul>
+    Both the sender and receiver using a DDS4CCM connector. The controller runs a
+    timer and periodically sends updates regarding location and size to the sender.
+  </p>
+  <img width="60%" height="40%" src="./images/system.png" />
+  <p><i><b>to-be-replaced</b></i></p>
+
+  <p>
+    This tutorial runs in conjuntion with the RTI shapes demo
+    (see <a href="./rti_shapes.html">this page<a/> how to run the
+    RTI shapes demo).
+  </p>
+
+  <h2>Directory structure</h2>
+  <p>
+    The following convention is used:
+    <ul>
+      <li>|--<b>*_asm</b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+          : Directory contains an assembly.
+      </li>
+      <li>&nbsp;&nbsp;&nbsp;&nbsp;|--<b>ports</b>
+          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+          : Directory contains common IDL code for the assembly.
+      </li>
+      <li>&nbsp;&nbsp;&nbsp;&nbsp;|--<b>*_comp</b>&nbsp;&nbsp;&nbsp;
+          : Directory contains an component.
+      </li>
+      <li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;|--
+          <b>ports</b>&nbsp;&nbsp;
+           : Directory contains common IDL code for the component.
+      </li>
+      <li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;|--&nbsp;&nbsp;
+          <b>src</b>&nbsp;&nbsp;&nbsp;
+          : Directory contains the IDL and *_exec-files for the component.
+      </li>
+    </ul>
+  </p>
+
+  <h2>File naming convention</h2>
+  <p>
+    The following convention is used:
+    <ul>
+      <li><b>*_defn.idl</b> - These files will contain definitions,
+          like enumerations, constants and so on<br/>
+          Typically located in *_asm/ports.
+      </li>
+      <li><b>*_msg.idl</b> - These files will contain the messages (data structure)
+          send by DDS.<br/>
+          Typically located in *_asm/ports.
+      </li>
+      <li><b>*_conn.idl</b> - These files will contain the connector
+          declarations.<br/>
+          Typically located in *_asm/ports.
+      </li>
+      <li><b>*_obj.idl</b> - These files will contain the interfaces between
+          components.<br/>
+          Typically located in *_asm/*_comp/ports.
+      </li>
+      <li><b>*_comp.idl</b> - These files will contain the component declaration.<br/>
+          Typically located in *_asm/*_comp/src.
+      </li>
+    </ul>
+  </p>
+
+  <h2>Additional conventions</h2>
+  <p>
+    <ul>
+      <li>MPC files are located in the same directory as the IDL and executor
+          files.
+      </li>
+      <li>Files that were generated by the TOA IDL compiler or the RTI DDS gen
+          compiler should be located in a subdirectory. In this tutorial the name
+          of this subdirectory is &quot;GeneratedCode&quot;.
+      </li>
+    </u>
+  </p>
+  <a align="right" href="./idl.html">Next</a>
+
+</body>
